--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -23,12 +23,20 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp" />
 
-    <ListView
-        android:id="@+id/leaderboard_list"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/your_score"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"
-        android:padding="5dp" />
+        android:layout_margin="10dp">
+
+        <ListView
+            android:id="@+id/leaderboard_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/your_score"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="5dp"
+            android:padding="5dp" />
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
