--- a/app/src/main/res/layout/permission_layout_details.xml
+++ b/app/src/main/res/layout/permission_layout_details.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/btnDecline"
         android:onClick="myAcceptHandler"
+        android:padding="0dp"
         android:text="Accept" />
 
     <Button
@@ -25,6 +26,7 @@
         android:layout_height="34dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:padding="0dp"
         android:text="Decline" />
 
     <TextView
