--- a/app/src/main/res/layout/activity_manage_messages.xml
+++ b/app/src/main/res/layout/activity_manage_messages.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".app.ManageMessagesActivity">
 
+    <include
+        android:id="@+id/messagesToolbar"
+        layout="@layout/toolbar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/messages_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="451dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/messagesToolbar"/>
 
 </RelativeLayout>
