--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -16,4 +16,20 @@
         <item>Brian Fraser</item>
     </string-array>
 
+    <integer-array name="theme_prices">
+        <item>5</item>
+        <item>5</item>
+        <item>5</item>
+        <item>5</item>
+        <item>5</item>
+    </integer-array>
+
+    <string-array name="theme_names">
+        <item>Default</item>
+        <item>Red</item>
+        <item>Pink</item>
+        <item>Teal</item>
+        <item>Dark</item>
+    </string-array>
+
 </resources>
