--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -18,47 +18,61 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/add_monitored_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="25dp"
-            android:layout_marginEnd="25dp"
-            android:text="@string/add"
-            android:textSize="24sp" />
-
-        <ListView
-            android:id="@+id/monitored_listview"
+        <android.support.v7.widget.CardView
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="203dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/monitored_txtview"
-            android:layout_margin="8dp"
-            android:layout_marginTop="8dp" />
+            android:layout_margin="15dp">
 
-        <TextView
-            android:id="@+id/monitored_txtview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="@string/monitored"
-            android:textSize="18sp" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/comment_txt_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="88dp" />
+            <Button
+                android:id="@+id/add_monitored_btn"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="25dp"
+                android:layout_marginEnd="25dp"
+                android:text="@string/add"
+                android:textSize="24sp" />
+
+            <ListView
+                android:id="@+id/monitored_listview"
+                android:layout_width="match_parent"
+                android:layout_height="203dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/monitored_txtview"
+                android:layout_margin="8dp"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/monitored_txtview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:text="@string/monitored"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/comment_txt_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="88dp" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
 
     </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/monitoring_relative_layout"
@@ -66,6 +80,16 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
+
+
+    <android.support.v7.widget.CardView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_margin="15dp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/add_monitoring_btn"
@@ -106,6 +130,10 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="88dp" />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
 
     </RelativeLayout>
 
