--- a/app/src/main/res/layout/permission_layout_details.xml
+++ b/app/src/main/res/layout/permission_layout_details.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/small">
 
     <TextView
         android:id="@+id/txtPermissionFrom"
         android:layout_width="132dp"
         android:layout_height="wrap_content"
         android:text="@string/request_from"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textColor="?attr/colorBackgroundFloating" />
 
     <Button
         android:id="@+id/btnAccept"
@@ -36,14 +38,16 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/btnAccept"
         android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textColor="?attr/colorBackgroundFloating" />
 
     <TextView
         android:id="@+id/txtPermissionStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnAccept"
         android:layout_alignBottom="@+id/txtPermissionAction"
         android:layout_alignParentEnd="true"
-        android:text="TextView" />
+        android:layout_below="@+id/btnAccept"
+        android:text="TextView"
+        android:textColor="?attr/colorBackgroundFloating" />
 </RelativeLayout>
